# 3d-rasterizer

./: .gitignore  CMakeLists.txt  README.md
src/: Device.cuh  Geometry.cu  Profiler.cu  Profiler.cuh  Rectangle.cu  Scene.cu  Shader.cu  Shader.cuh  Text.cu  Text.cuh  Transform.cu  Triangle.cu  Window.cu  Window.cuh  glad.c  main.cu
src/geometry/: Cube.cu  Cube.cuh  FaceSet.cuh  Geometry.cu  Geometry.cuh  Model.cu  Model.cuh  ModelFace.cuh  ModelVertex.cuh  Plane.cu  Plane.cuh  PlyLoader.cu  PlyLoader.cuh  Rectangle.cu  Rectangle.cuh  Triangle.cu  Triangle.cuh  VertexSet.cuh
src/header/: Geometry.cuh  Scene.cuh  Shader.cuh  Transform.cuh  Triangle.cuh  Window.cuh
src/shader/: mesh.vert  new_mesh.frag  new_mesh.vert  triangle.frag
src/world/: Camera.cu  Camera.cuh  Scene.cu  Scene.cuh  Transform.cu  Transform.cuh
